<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">techJOYnT Remote Control</string>
    <string name="select_robot_type">Select Robot Type</string>
    <string name="okay">Okay</string>
    <string name="no_bluetooth_message">We are sorry but we do not detect Bluetooth on your device. \nIf you do have Bluetooth please try enabling it manually.</string>
    <string name="no_bluetooth">Bluetooth Not Detected</string>
    <string name="bluetooth_required">Bluetooth Required</string>
    <string name="bluetooth_required_message">Bluetooth needs to be enabled in order for this application to work properly.</string>
    <string name="cancel">Cancel</string>
    <string name="techjoynt_about_us_copyright">\u00A9 2014 techJOYnT All Rights Reserved</string>
    <string name="about_label">About App</string>
    <string name="splash_img_des">Image used for displaying a nice splash screen</string>
    <string name="about_message">create. tinker. learn.</string>
    <string name="about">About</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="enable">Enable</string>
    <string name="splash_desc">Splash Screen</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="not_connected">Not Connected</string>
    <string name="choose_device_type">Choose Device Type</string>
    <string name="switch_device_type">Switch Device Type</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="select_default_device_type">Select Default Device Type</string>
    <string name="pref_default_device_type_summary">Automatically opens the app with the selected device types layout.</string>
    <string name="default_device_layout">Default Device Layout</string>
    <string name="preferences">Preferences</string>
    <string name="remote_control">Remote Control</string>
    <string name="intravita_about_us_copyright">\u00A9 2014 Intravita LLC All Rights Reserved </string>
    <string name="future_feature">Future Feature</string>
    <string name="future_feature_message">We are terribly sorry, this feature is not ready for the public as testing is still needed. \nWe hope you enjoy this update that enhances app stability.</string>
    <string name="scan">Scan</string>
    <string name="no_devices">No Devices</string>
    <string name="devices_found">Devices found:/></string>
    <string name="paired_devices">Paired devices:</string>
    <string name="connect_to_device">Connect to Device</string>
    <string name="power">Power:</string>
</resources>