<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/form_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/techjoynt_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:contentDescription="@string/splash_img_des"
            android:scaleType="center"
            android:src="@drawable/logo"/>
        <TextView
            android:id="@id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
        <com.techjoynt.android.nxt.widget.AutoResizeTextView
            android:id="@id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:text="@string/techjoynt_about_us_copyright"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:maxLines="4"
            android:text="@string/about_message"/>
        <View
            style="@style/Divider"
            android:layout_margin="10dp"/>
        <ImageView
            android:id="@+id/intravita_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:contentDescription="@string/splash_img_des"
            android:scaleType="center"
            android:src="@drawable/intravita"/>
        <com.techjoynt.android.nxt.widget.AutoResizeTextView
            android:id="@id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:text="@string/intravita_about_us_copyright"/>
    </LinearLayout>
</ScrollView>